# pars

./: Cargo.toml  README.md  commands.txt  diff.sh  helloworldimtom.sh  manual.sh  mark_request.txt
src/: main.rs
src/bilrap/: errors.rs  parser.rs  remote.rs
tests/: 0_1_simple_different  0_2_many_commands  1_0_multiple_commands  1_1_quoting  1_2_sleepy  1_3_halting_problems  2_0_multiple_commands_2_threads  2_1_multiple_commands_4_threads  2_2_multiple_commands_errors_4_threads  2_3_ordering_good  3_1_halt_lazy_2_threads  3_3_halt_eager_3_threads  README.md  test_list
